--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="pag.css" rel="stylesheet">
+    <link href="countries/pag.css" rel="stylesheet">
     
 </head>
 <body>
     <h1>Country Flags</h1>
     <section class="flags"> </section>
 
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="countries/js/main.js"></script>
 </body>
 </html>
